CONSUMER: Type Streams manager poll conditions